--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
 # Virtual environment
 venv/
+env/
 
 # Python cache
 __pycache__/
 *.pyc
-*.pyo
+
+# Django stuff
+db.sqlite3
+*.log
+
+# OS files
+.DS_Store
+Thumbs.db
